--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@astrojs/check": "^0.7.0",
     "@astrojs/node": "^8.3.2",
+    "@astrojs/vercel": "^7.8.2",
     "@astrojs/vue": "^4.5.0",
     "@auth/core": "^0.32.0",
+    "@prisma/client": "^5.22.0",
     "astro": "^4.11.3",
     "auth-astro": "^4.1.2",
     "bootstrap": "^5.3.3",
@@ -23,6 +25,7 @@
     "vue": "^3.4.31"
   },
   "devDependencies": {
-    "@types/pg": "^8.11.10"
+    "@types/pg": "^8.11.10",
+    "prisma": "^5.22.0"
   }
 }
