--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@prisma/client": "^5.22.0",
     "astro": "^4.11.3",
     "auth-astro": "^4.1.2",
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "pg": "^8.13.1",
