--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue": "^3.4.31"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/pg": "^8.11.10",
     "prisma": "^5.22.0"
   }
